--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 </head>
 <body>
 
+  <h1>Showing if you are loggedin:</h1>
+  <h2><%= logged_in?%></h2>
+  <%= link_to "Log out", logout_path, method: "delete" %>
 <%= yield %>
 
 </body>
