--- a/app/views/welcomepage/show.html.erb
+++ b/app/views/welcomepage/show.html.erb
@@ -1,3 +1,7 @@
+<% flash.each do |message_type, message| %>
+  <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
+
 <h1>Welcome to ProjectK</h1>
 <p>First, what do you want me to call you?</p>
 
