--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   <h1>Showing if you are loggedin:</h1>
   <h2><%= logged_in?%></h2>
   <%= link_to "Log out", logout_path, method: "delete" %>
+
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
 <%= yield %>
 
 </body>
