exit game + redirect

--- a/app/views/game_room/show.html.erb
+++ b/app/views/game_room/show.html.erb
@@ -5,3 +5,8 @@
   Game ID:
   <%= @current_game ? @current_game.id : 'no current_game'%>
 </div>
+
+
+<div>
+  <%= link_to 'Exit Game', '/exit'%>
+</div>
