--- a/app/views/game_room/show.html.erb
+++ b/app/views/game_room/show.html.erb
@@ -11,16 +11,15 @@
   </ul>
   <% if is_game_host? %>
     <div>
-      <p><%= link_to "Killers Win", '/killer_win'%></p>
-      <p><%= link_to "Killers Lose", '/killer_lose'%></p>
-      <p><%= link_to "Cancel Game", '/'%></p>
+      <p><%= link_to "Killers Win", '/killer_win/true'%></p>
+      <p><%= link_to "Killers Lose", '/killer_win/false'%></p>
+      <p><%= link_to "Exit Game", '/host_exit_game'%></p>
     </div>
+  <% else %>
+  <div>
+    <p><%= link_to 'Next Game', '#'%></p>
+    <p><%= link_to 'Exit Game', '/exit_game'%></p>
+  </div>
   <% end %>
 
 </div>
-
-<% unless is_game_host? %>
-  <div>
-    <%= link_to 'Exit Game', '/exit'%>
-  </div>
-<% end %>
